# robotis_op_moveit

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  controllers_simulation.yaml  darwinOP.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robotis_op.srdf
launch/: darwinOP_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_simulation.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context_simulation.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test_controllers.yaml  trajectory_execution.launch.xml  warehouse.launch
